Comentarios CSS y HTML

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
       <!-- Menu de la pagina -->
       <nav class=" menu navbar navbar-expand-lg navbar-light colour scrolling-navbar fixed-top">
+        <!-- Logo de la pagina, que se mostrara en el menu -->
         <img src="img/ndeah.png" alt="">
 
         <!-- Boton de menu cuando pantalla es demasiado chica -->
