--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-9 col-md-12">
                 <div class="row justify-content-center text-center">
-                  <div class="prueba col-lg-4 col-md-9 mb-4">
+                  <div class="prueba col-lg-4 col-md-12 mb-4">
                     <div class="card">
                       <div class="card-body d-flex flex-column justify-content-center align-items-center">
                         <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
@@ -69,7 +69,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="prueba col-lg-4 col-md-9 mb-4">
+                  <div class="prueba col-lg-4 col-md-12 mb-4">
                     <div class="card">
                       <div class="card-body d-flex flex-column justify-content-center align-items-center">
                         <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
@@ -79,7 +79,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="prueba col-lg-4 col-md-9 mb-4">
+                  <div class="prueba col-lg-4 col-md-12 mb-4">
                     <div class="card">
                       <div class="card-body d-flex flex-column justify-content-center align-items-center">
                         <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
@@ -90,7 +90,7 @@
                     </div>
                   </div>
                   <div class="hidden-news collapse row justify-content-center text-center col-lg-12 col-md-12" id="collapseNews">
-                    <div class="prueba col-lg-4 col-md-9 mb-4">
+                    <div class="prueba col-lg-4 col-md-12 mb-4">
                       <div class="card">
                         <div class="card-body d-flex flex-column justify-content-center align-items-center">
                           <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
@@ -100,7 +100,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="prueba col-lg-4 col-md-9 mb-4">
+                    <div class="prueba col-lg-4 col-md-12 mb-4">
                       <div class="card">
                         <div class="card-body d-flex flex-column justify-content-center align-items-center">
                           <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
@@ -110,7 +110,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="prueba col-lg-4 col-md-9 mb-4">
+                    <div class="prueba col-lg-4 col-md-12 mb-4">
                       <div class="card">
                         <div class="card-body d-flex flex-column justify-content-center align-items-center">
                           <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
@@ -129,11 +129,11 @@
             <br><br><br><br>
           </section>
         </section>
-        <section class="container-miniGame">
+        <section class="container-miniGame col-lg-12 col-md-12">
           <hr >
           <h1 id="sec-miniGame" class="section-news" >Mini-Juegos</h1>
           <div class="row justify-content-center">
-            <div class="carousel slide" data-ride="carousel">
+            <div class="carousel slide col-lg-6 col-md-12" data-ride="carousel">
               <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
