--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                       <div class="card-body d-flex flex-column justify-content-center align-items-center">
                         <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
                         <img class="card-img-top "src="img/ancestors.jpg" alt="">
-                        <p class="card-text">The Humankind Odyssey: Embárcate en la increíble odisea de la evolución humana y comienza tu viaje 10 millones de años atrás en una nueva aventura de la mano del creador de Assassin's Creed.</p>
+                        <p class="card-text">The Humankind Odyssey: Embárcate en la increíble odisea de la evolución humana y comienza tu viaje 10 millones de años atrás en una nueva aventura.</p>
                         <a href="#" class="btn mt-auto">Button</a>
                       </div>
                     </div>
@@ -172,6 +172,7 @@
 
         </section>
         <!-- Fin seccion noticias -->
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </div>
     </div>
     <!-- Fin contenedor pagina -->
