ajustes de tamaño

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
                         <img class="card-img-top "src="img/fifa.jpg" alt="">
                         <p class="card-text">FIFA2020: para PC te muestra las dos caras del deporte rey: la prestigiosa competición profesional y el fútbol callejero más auténtico en la nueva experiencia EA SPORTS VOLTA.</p>
-                        <a href="#" class="btn mt-auto">Ver info</a>
+                        <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                       </div>
                     </div>
                   </div>
@@ -86,7 +86,7 @@
                         <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
                         <img class="card-img-top "src="img/ancestors.jpg" alt="">
                         <p class="card-text">The Humankind Odyssey: Embárcate en la increíble odisea de la evolución humana y comienza tu viaje 10 millones de años atrás en una nueva aventura.</p>
-                        <a href="#" class="btn mt-auto">Ver info</a>
+                        <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                       </div>
                     </div>
                   </div>
@@ -96,7 +96,7 @@
                         <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
                         <img class="card-img-top "src="img/cyberpunk.png" alt="">
                         <p class="card-text">Cyberpunk 2077 es una historia de acción y aventura en mundo abierto ambientada en Night City, una megalópolis obsesionada con el poder, el glamur y la modificación corporal.</p>
-                        <a href="#" class="btn mt-auto">Ver info</a>
+                        <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                       </div>
                     </div>
                   </div>
@@ -107,7 +107,7 @@
                           <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
                           <img class="card-img-top "src="http://placehold.it/700x400" alt="">
                           <p class="card-text">Don't like that typical Bootstrap look? Each theme has a custom look-and-feel, while maximizing use of Bootstrap without extensive additional CSS &amp; JS.</p>
-                          <a href="#" class="btn mt-auto">Ver info</a>
+                          <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                         </div>
                       </div>
                     </div>
@@ -117,7 +117,7 @@
                           <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
                           <img class="card-img-top "src="http://placehold.it/700x400" alt="">
                           <p class="card-text">Don't like that typical Bootstrap look? Each theme has a custom look-and-feel, while maximizing use of Bootstrap without extensive additional CSS &amp; JS.</p>
-                          <a href="#" class="btn mt-auto">Ver info</a>
+                          <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                         </div>
                       </div>
                     </div>
@@ -127,7 +127,7 @@
                           <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
                           <img class="card-img-top "src="http://placehold.it/700x400" alt="">
                           <p class="card-text">Don't like that typical Bootstrap look? Each theme has a custom look-and-feel, while maximizing use of Bootstrap without extensive additional CSS &amp; JS.</p>
-                          <a href="#" class="btn mt-auto">Ver info</a>
+                          <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                         </div>
                       </div>
                     </div>
