--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 </head>
   <!-- Cuerpo de la pagina -->
   <body>
+    <a href="#contenido" class="ancla">Salto a info</a>
     <!-- Contenedor de la pagina -->
     <div id="container">
-
+      <a name="contenido"> </a>
       <!-- Menu de la pagina -->
       <nav class=" menu navbar navbar-expand-lg navbar-light colour scrolling-navbar fixed-top">
         <!-- Logo de la pagina, que se mostrara en el menu -->
-        <img src="img/faiIcon.png" alt="">
+        <img src="img/faiIcon.png" alt="Icono Fai games">
         <!-- Boton de menu cuando pantalla es demasiado chica -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -33,7 +34,7 @@
         <!-- Menu que se escondera -->
         <div class="links collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Distintas opciones del menu -->
-          <ul class="navbar-nav mr-auto">
+          <ul class="principal navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
             </li>
@@ -43,24 +44,27 @@
             <li class="nav-item">
               <a class="nav-link" href="#sec-miniGame">Minijuegos</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#sec-Esports">ESports</a>
+            </li>
           </ul>
           <ul class="navbar-nav nav-flex-icons">
             <li class="nav-item">
-              <a class="nav-link"><i class="fab fa-facebook-f"></i></a>
+              <a class="nav-link"><em class="fab fa-facebook-f"></em></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"><i class="fab fa-twitter"></i></a>
+              <a class="nav-link"><em class="fab fa-twitter"></em></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"><i class="fab fa-instagram"></i></a>
+              <a class="nav-link"><em class="fab fa-instagram"></em></a>
             </li>
           </ul>
         </div>
       </nav>
       <div class="page-container col-lg-12 justify-content-lg-center">
         <section class="background">
-          <img src="img/fai.png" alt=""><br>
-          <h7 class="letra-pie">Pagina sobre videojuegos para laboratorio de programacion.</h6>
+          <img src="img/fai.png" alt="Logo pagina"><br>
+          <p class="letra-pie">Pagina sobre videojuegos para laboratorio de programacion.</p>
         </section>
         <section class="container-news">
           <hr id="sec-news">
@@ -73,8 +77,7 @@
                   <div class="prueba col-lg-4 col-md-12 mb-4">
                     <div class="card">
                       <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                        <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
-                        <img class="card-img-top "src="img/fifa.jpg" alt="">
+                        <img class="card-img-top" src="img/fifa.jpg" alt="Imagen juego 1">
                         <p class="card-text">FIFA2020: para PC te muestra las dos caras del deporte rey: la prestigiosa competición profesional y el fútbol callejero más auténtico en la nueva experiencia EA SPORTS VOLTA.</p>
                         <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                       </div>
@@ -83,8 +86,7 @@
                   <div class="prueba col-lg-4 col-md-12 mb-4">
                     <div class="card">
                       <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                        <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
-                        <img class="card-img-top "src="img/ancestors.jpg" alt="">
+                        <img class="card-img-top" src="img/ancestors.jpg" alt="Imagen juego 2">
                         <p class="card-text">The Humankind Odyssey: Embárcate en la increíble odisea de la evolución humana y comienza tu viaje 10 millones de años atrás en una nueva aventura.</p>
                         <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                       </div>
@@ -93,8 +95,7 @@
                   <div class="prueba col-lg-4 col-md-12 mb-4">
                     <div class="card">
                       <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                        <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
-                        <img class="card-img-top "src="img/cyberpunk.png" alt="">
+                        <img class="card-img-top" src="img/cyberpunk.png" alt="Imagen juego 3">
                         <p class="card-text">Cyberpunk 2077 es una historia de acción y aventura en mundo abierto ambientada en Night City, una megalópolis obsesionada con el poder, el glamur y la modificación corporal.</p>
                         <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                       </div>
@@ -104,8 +105,7 @@
                     <div class="prueba col-lg-4 col-md-12 mb-4">
                       <div class="card">
                         <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                          <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
-                          <img class="card-img-top "src="http://placehold.it/700x400" alt="">
+                          <img class="card-img-top" src="http://placehold.it/700x400" alt="Imagen juego 4">
                           <p class="card-text">Don't like that typical Bootstrap look? Each theme has a custom look-and-feel, while maximizing use of Bootstrap without extensive additional CSS &amp; JS.</p>
                           <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                         </div>
@@ -114,8 +114,7 @@
                     <div class="prueba col-lg-4 col-md-12 mb-4">
                       <div class="card">
                         <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                          <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
-                          <img class="card-img-top "src="http://placehold.it/700x400" alt="">
+                          <img class="card-img-top" src="http://placehold.it/700x400" alt="Imagen juego 5">
                           <p class="card-text">Don't like that typical Bootstrap look? Each theme has a custom look-and-feel, while maximizing use of Bootstrap without extensive additional CSS &amp; JS.</p>
                           <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                         </div>
@@ -124,8 +123,7 @@
                     <div class="prueba col-lg-4 col-md-12 mb-4">
                       <div class="card">
                         <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                          <h1 class="display-2 text-primary"><span class="ion ion-ios-snow-outline"></span></h1>
-                          <img class="card-img-top "src="http://placehold.it/700x400" alt="">
+                          <img class="card-img-top" src="http://placehold.it/700x400" alt="Imagen juego 6">
                           <p class="card-text">Don't like that typical Bootstrap look? Each theme has a custom look-and-feel, while maximizing use of Bootstrap without extensive additional CSS &amp; JS.</p>
                           <a href="#" class="btn mt-auto col-lg-9 col-md-12">Ver info</a>
                         </div>
@@ -139,25 +137,56 @@
             <br><br><br><br>
           </section>
         </section>
-        <section class="container-miniGame col-lg-12 col-md-12">
-          <hr >
-          <h1 id="sec-miniGame" class="section-news" >Mini-Juegos</h1>
+        <!-- Fin seccion noticias -->
+        <!-- Inicio seccion Juegos -->
+        <section class="container-100vh col-lg-12 col-md-12">
+          <hr id="sec-miniGame" ><br><br><br>
+          <h2 class="section-news" >Mini-Juegos</h2>
           <div class="row justify-content-center">
-            <div class="carousel slide col-lg-6 col-md-12" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide col-lg-7 col-md-12" data-interval="false" data-ride="carousel">
               <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
               </ol>
-              <div class="carousel-inner">
+              <div class="carousel-game carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="img/arma1.jpg" alt="First slide">
+                  <img class="game" src="img/gauchos.png" alt="First slide">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="game-text">Juego basado en conflicto de Gauchos De la Rural Y Veganos que protestaban por los derechos de los animales.</p>
+                    <button type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter" onclick="jugar('https://v6p9d9t4.ssl.hwcdn.net/html/1569072/Sunset%20Gauchers/index.html')">
+                      Play
+                    </button>
+                  </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="img/arma2.jpg" alt="Second slide">
+                  <img class="game" src="img/chano.png" alt="Second slide">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="game-text">Juego basado en el cantante Chano Moreno Charpentier quien protagonizó un accidente de tránsito.</p>
+                    <button type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter" onclick="jugar('https://v6p9d9t4.ssl.hwcdn.net/html/421376/Chanogeddon3/index.html')">
+                      Play
+                    </button>
+                  </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="img/arma3.jpg" alt="Third slide">
+                  <img class="game d-block w-100" src="img/gordo_mortero.jpg" alt="Third slide">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="game-text">Juego basado en el militante que utilizo un mortero casero en las manifestaciones contra la reforma previsional.</p>
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter" onclick="jugar('https://v6p9d9t4.ssl.hwcdn.net/html/710674/gordomortero/index.html')">
+                      Play
+                    </button>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img class="game d-block w-100" src="img/wonder.jpg" alt="Fourth slide">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="game-text">Juego basado en el cantante "Pity" Alvares en su famosa bicicleta</p>
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter" onclick="jugar('https://v6p9d9t4.ssl.hwcdn.net/html/967327/Pity/index.html')">
+                      Play
+                    </button>
+                  </div>
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -170,10 +199,72 @@
               </a>
             </div>
           </div>
-
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3 class="modal-title" id="exampleModalLongTitle">Disfrute del minijuego</h3>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span class="close" aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div id="modal-body"class="modal-body">
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn" data-dismiss="modal" onclick="cerrar()">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
-        <!-- Fin seccion noticias -->
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <!-- Fin seccion Juegos -->
+        <section class="container-100vh col-lg-12 col-md-12">
+          <hr id="sec-Esports" ><br><br><br>
+          <h3 class="section-news" >ESports</h3>
+          <div class="row justify-content-center esports">
+            <ul class="nav nav-tabs col-lg-12" id="Tab-Esports" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" id="lol-tab" data-toggle="tab" href="#lol" role="tab" aria-controls="home" aria-selected="true">Lol</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="fornite-tab" data-toggle="tab" href="#fornite" role="tab" aria-controls="profile" aria-selected="false">Fornite</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="csgo-tab" data-toggle="tab" href="#csgo" role="tab" aria-controls="contact" aria-selected="false">CS:Go</a>
+              </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active" id="lol" role="tabpanel" aria-labelledby="lol-tab">
+                <h4 class="section-esports" >League Of Legends</h4>
+                <div class="row col-lg-12">
+                  <div class="container-imgGame col-lg-6 col-md-12 mb-3">
+                    <a href="https://esports.as.com/league-of-legends/">
+                    <img class="img-esports col-lg-12" src="img/lol.jpg" alt="imagen lol">
+                    <p class="centered-text">League of Legends es un videojuego del género multijugador de arena de batalla en línea y deporte electrónico el cual fue desarrollado por Riot Games</p>
+                    </a>
+                  </div>
+                  <div class="col-lg-6">
+                    <p>Trailer/Cinematica</p>
+                    <iframe class="trailer col-lg-6" src="https://www.youtube.com/embed/bhPTBy2ekN8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane fade" id="fornite" role="tabpanel" aria-labelledby="fornite-tab">
+                <h4 class="section-esports" >Fornite</h4>
+                <figure class="col-lg-6">
+                  <img class="col-lg-12" src="img/fornite.jpg" alt="imagen fornite">
+                </figure>
+              </div>
+              <div class="tab-pane fade" id="csgo" role="tabpanel" aria-labelledby="csgo-tab">
+                <h4 class="section-esports" >Counte-Strike:GO</h4>
+                <figure class="col-lg-6">
+                  <img class="col-lg-12" src="img/csgo.jpg" alt="imagen csgo">
+                </figure>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
     <!-- Fin contenedor pagina -->
