--- a/index.html
+++ b/index.html
@@ -251,13 +251,13 @@
                 </div>
               </div>
               <div class="tab-pane fade" id="fornite" role="tabpanel" aria-labelledby="fornite-tab">
-                <h4 class="section-esports" >Fornite</h4>
+                <h4 class="section-esports">Fornite</h4>
                 <figure class="col-lg-6">
                   <img class="col-lg-12" src="img/fornite.jpg" alt="imagen fornite">
                 </figure>
               </div>
               <div class="tab-pane fade" id="csgo" role="tabpanel" aria-labelledby="csgo-tab">
-                <h4 class="section-esports" >Counte-Strike:GO</h4>
+                <h4 class="section-esports" >Counter-Strike:GO</h4>
                 <figure class="col-lg-6">
                   <img class="col-lg-12" src="img/csgo.jpg" alt="imagen csgo">
                 </figure>
