--- a/index.html
+++ b/index.html
@@ -308,19 +308,62 @@
                 <!-- Encabezado de juego esports -->
                 <h4 class="section-esports" >League Of Legends</h4>
                 <div class="row col-lg-12">
-                  <div class="container-imgGame col-lg-6 col-md-12 mb-3">
+                  <div class="container-imgGame col-lg-6 col-md-12 mb-5">
                     <!-- Link a juego esports -->
-                    <a href="https://esports.as.com/league-of-legends/">
+                    <a target="_blank" href="https://esports.as.com/league-of-legends/">
                     <!-- Imagen juego esports -->
                     <img class="img-esports col-lg-12" src="img/lol.jpg" alt="imagen lol">
                     <!-- Info juego esports -->
-                    <p class="centered-text">League of Legends es un videojuego del género multijugador de arena de batalla en línea y deporte electrónico el cual fue desarrollado por Riot Games</p>
+                    <p class="centered-text">League of Legends es un videojuego del género multijugador de arena de batalla en línea y deporte electrónico el cual fue desarrollado por Riot Games.</p>
                     </a>
                   </div>
                   <div class="col-lg-6">
                     <!-- Trailer/Cinematicas juego esports -->
                     <p>Trailer/Cinematica</p>
                     <iframe title="Iframe Example" class="trailer col-lg-6" src="https://www.youtube.com/embed/bhPTBy2ekN8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="col-lg-9 col-md-12 container text-center my-3">
+                        <p>Ultimas Noticias ESports</p>
+                        <div id="recipeCarousel" class="carousel slide w-100 carousel-esports" data-interval="false" data-ride="carousel">
+                            <div class="carousel-inner w-100" role="listbox">
+                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters active">
+                                    <div class="col-6 col-md-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/league-of-legends/Noa-incorpora-equipo-retransmision-LVP_0_1279672021.html">
+                                        <img class="img-fluid" src="img/noticia1Lol.jpg">
+                                      </a>
+                                      <p class="text-new-esports">Noa se incorpora al equipo de transmisión de la LVP</p>
+                                    </div>
+                                    <div class="col-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/league-of-legends/nuevas-camisetas-Nike-LPL_3_1281201868.html">
+                                        <img class="img-fluid" src="img/noticias2Lol.jpg">
+                                      </a>
+                                      <p class="text-new-esports">Las nuevas camisetas Nike de la LPL</p>
+                                    </div>
+                                </div>
+                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters">
+                                    <div class="col-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/league-of-legends/Yasuo-campeon-odiado-SoloQ_0_1281771812.html">
+                                        <img class="img-fluid" src="img/noticia3Lol.jpg">
+                                      </a>
+                                      <p class="text-new-esports">Yasuo ya no es el campeón más odiado en SoloQ</p>
+                                    </div>
+                                    <div class="col-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/league-of-legends/Conoce-representaran-Europa-Mundiales-LoL_0_1282371752.html">
+                                        <img class="img-fluid" src="img/noticia4Lol.jpg">
+                                      </a>
+                                       <p class="text-new-esports">Teams que representarán a Europa en los Mundiales de LoL</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="control carousel-control-prev" href="#recipeCarousel" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="control carousel-control-next" href="#recipeCarousel" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -330,10 +373,65 @@
               <div class="tab-pane fade" id="fornite" role="tabpanel" aria-labelledby="fornite-tab">
                 <!-- Encabezado de juego esports -->
                 <h4 class="section-esports" >Fornite</h4>
-                <!-- Imagen juego esports -->
-                <figure class="col-lg-6">
-                  <img class="col-lg-12" src="img/fornite.jpg" alt="imagen fornite">
-                </figure>
+                <div class="row col-lg-12">
+                  <div class="container-imgGame col-lg-6 col-md-12 mb-3">
+                    <!-- Link a juego esports -->
+                    <a target="_blank" href="https://esports.as.com/fortnite/">
+                    <!-- Imagen juego esports -->
+                    <img class="img-esports col-lg-12" src="img/fornite.jpg" alt="imagen fornite">
+                    <!-- Info juego esports -->
+                    <p class="centered-text">Fortnite es un videojuego del año 2017 desarrollado por la empresa Epic Games, lanzado como diferentes paquetes de software que presentan diferentes modos de juego, pero que comparten el mismo motor general de juego y las mecánicas.</p>
+                    </a>
+                  </div>
+                  <div class="col-lg-6">
+                    <!-- Trailer/Cinematicas juego esports -->
+                    <p>Trailer/Cinematica</p>
+                    <iframe title="Iframe Example" class="trailer col-lg-6" src="https://www.youtube.com/embed/bhPTBy2ekN8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="col-lg-9 container text-center my-3">
+                        <p>Ultimas Noticias ESports</p>
+                        <div id="recipeCarousel-fornite" class="carousel slide w-100 carousel-esports" data-interval="false" data-ride="carousel">
+                            <div class="carousel-inner w-100" role="listbox">
+                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters active">
+                                    <div class="col-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/fortnite/Ninja-podria-propios-cosmeticos-Fortnite_0_1280271964.html">
+                                        <img class="img-fluid" src="img/noticia1For.jpg">
+                                      </a>
+                                      <p class="text-new-esports">Ninja podría tener sus propios cosméticos en Fortnite</p>
+                                    </div>
+                                    <div class="col-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/league-of-legends/nuevas-camisetas-Nike-LPL_3_1281201868.html">
+                                        <img class="img-fluid" src="img/noticia2For.jpg">
+                                      </a>
+                                      <p class="text-new-esports">Reporta a un hacker en directo y lo banean al instante</p>
+                                    </div>
+                                </div>
+                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters">
+                                    <div class="col-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/fortnite/copia-descarada-Fortnite-moviles_0_1279672032.html">
+                                        <img class="img-fluid" src="img/noticia3For.jpg">
+                                      </a>
+                                      <p class="text-new-esports">La copia más descarada de Fortnite para móviles</p>
+                                    </div>
+                                    <div class="col-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/fortnite/Top-jugadores-ganancias-Fortnite_3_1278502138.html">
+                                        <img class="img-fluid" src="img/noticia4For.jpg">
+                                      </a>
+                                       <p class="text-new-esports">Top 10 jugadores con más ganancias en Fortnite</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="control carousel-control-prev" href="#recipeCarousel-fornite" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="control carousel-control-next" href="#recipeCarousel-fornite" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                  </div>
+                </div>
                 <!-- Fin imagen juego esports -->
               </div>
               <!-- Fin contenido segunda solapa -->
@@ -342,10 +440,65 @@
               <div class="tab-pane fade" id="csgo" role="tabpanel" aria-labelledby="csgo-tab">
                 <!-- Encabezado de juego esports -->
                 <h4 class="section-esports" >Counte-Strike:GO</h4>
-                <!-- Imagen juego esports -->
-                <figure class="col-lg-6">
-                  <img class="col-lg-12" src="img/csgo.jpg" alt="imagen csgo">
-                </figure>
+                <div class="row col-lg-12">
+                  <div class="container-imgGame col-lg-6 col-md-12 mb-3">
+                    <!-- Link a juego esports -->
+                    <a href="https://esports.as.com/counter-strike--global-offensive/">
+                    <!-- Imagen juego esports -->
+                    <img class="img-esports col-lg-12" src="img/csgo.jpg" alt="imagen Csgo">
+                    <!-- Info juego esports -->
+                    <p class="centered-text">Counter-Strike: Global Offensive es un videojuego de disparos en primera persona desarrollado por Valve Corporation en cooperación con Hidden Path Entertainment.</p>
+                    </a>
+                  </div>
+                  <div class="col-lg-6">
+                    <!-- Trailer/Cinematicas juego esports -->
+                    <p>Trailer/Cinematica</p>
+                    <iframe title="Iframe Example" class="trailer col-lg-6" src="https://www.youtube.com/embed/bhPTBy2ekN8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="col-lg-9 container text-center my-3">
+                        <p>Ultimas Noticias ESports</p>
+                        <div id="recipeCarousel-csgo" class="carousel slide w-100 carousel-esports" data-interval="false" data-ride="carousel">
+                            <div class="carousel-inner w-100" role="listbox">
+                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters active">
+                                    <div class="col-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/counter-strike--global-offensive/jugadores-dinero-ganado-CSGO_3_1280601930.html">
+                                        <img class="img-fluid" src="img/noticia1Csgo.jpg">
+                                      </a>
+                                      <p class="text-new-esports">Los diez jugadores que más dinero han ganado en CS:GO</p>
+                                    </div>
+                                    <div class="col-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/counter-strike--global-offensive/presidente-Brasil-jugador-CSGO-impuestos_0_1268573132.html">
+                                        <img class="img-fluid" src="img/noticia2Csgo.jpg">
+                                      </a>
+                                      <p class="text-new-esports">El presidente de Brasil llama a un jugador de CS:GO para debatir sobre impuestos</p>
+                                    </div>
+                                </div>
+                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters">
+                                    <div class="col-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/counter-strike--global-offensive/Polemica-nueva-norma-Major_0_1261073882.html">
+                                        <img class="img-fluid" src="img/noticia3Csgo.jpg">
+                                      </a>
+                                      <p class="text-new-esports">'Polémica' con la nueva norma para el Major</p>
+                                    </div>
+                                    <div class="col-6 float-left">
+                                      <a target="_blank" href="https://esports.as.com/counter-strike--global-offensive/Mixwell-ficha-Cloud9_0_1259874016.html">
+                                        <img class="img-fluid" src="img/noticia4Csgo.jpg">
+                                      </a>
+                                       <p class="text-new-esports">Mixwell ficha por Cloud9</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="control carousel-control-prev" href="#recipeCarousel-csgo" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="control carousel-control-next" href="#recipeCarousel-csgo" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                  </div>
+                </div>
                 <!-- Fin imagen juego esports -->
               </div>
               <!-- Fin contenido tercer solapa -->
