--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 
   <!-- Cuerpo de la pagina -->
   <body>
-    <a href="#contenido"></a>
+    <a href="#container">..</a>
     <!-- Contenedor de la pagina -->
     <div id="container">
-      <a name="contenido"></a>
       <!-- Menu de la pagina -->
       <nav class="menu navbar navbar-expand-lg navbar-light colour scrolling-navbar fixed-top">
         <!-- Logo de la pagina, que se mostrara en el menu -->
@@ -325,30 +324,30 @@
                         <p>Ultimas Noticias ESports</p>
                         <div id="recipeCarousel" class="carousel slide w-100 carousel-esports" data-interval="false" data-ride="carousel">
                             <div class="carousel-inner w-100" role="listbox">
-                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters active">
+                                <div class="carousel-Noticias-esports carousel-item row no-gutters active">
                                     <div class="col-6 col-md-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/league-of-legends/Noa-incorpora-equipo-retransmision-LVP_0_1279672021.html">
-                                        <img class="img-fluid" src="img/noticia1Lol.jpg">
+                                        <img class="img-fluid" src="img/noticia1Lol.jpg" alt="noticia lol 1">
                                       </a>
                                       <p class="text-new-esports">Noa se incorpora al equipo de transmisión de la LVP</p>
                                     </div>
                                     <div class="col-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/league-of-legends/nuevas-camisetas-Nike-LPL_3_1281201868.html">
-                                        <img class="img-fluid" src="img/noticias2Lol.jpg">
+                                        <img class="img-fluid" src="img/noticias2Lol.jpg" alt="noticia lol 2">
                                       </a>
                                       <p class="text-new-esports">Las nuevas camisetas Nike de la LPL</p>
                                     </div>
                                 </div>
-                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters">
+                                <div class="carousel-Noticias-esports carousel-item row no-gutters">
                                     <div class="col-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/league-of-legends/Yasuo-campeon-odiado-SoloQ_0_1281771812.html">
-                                        <img class="img-fluid" src="img/noticia3Lol.jpg">
+                                        <img class="img-fluid" src="img/noticia3Lol.jpg" alt="noticia lol 3">
                                       </a>
                                       <p class="text-new-esports">Yasuo ya no es el campeón más odiado en SoloQ</p>
                                     </div>
                                     <div class="col-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/league-of-legends/Conoce-representaran-Europa-Mundiales-LoL_0_1282371752.html">
-                                        <img class="img-fluid" src="img/noticia4Lol.jpg">
+                                        <img class="img-fluid" src="img/noticia4Lol.jpg" alt="noticia lol 4">
                                       </a>
                                        <p class="text-new-esports">Teams que representarán a Europa en los Mundiales de LoL</p>
                                     </div>
@@ -391,30 +390,30 @@
                         <p>Ultimas Noticias ESports</p>
                         <div id="recipeCarousel-fornite" class="carousel slide w-100 carousel-esports" data-interval="false" data-ride="carousel">
                             <div class="carousel-inner w-100" role="listbox">
-                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters active">
+                                <div class="carousel-Noticias-esports carousel-item row no-gutters active">
                                     <div class="col-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/fortnite/Ninja-podria-propios-cosmeticos-Fortnite_0_1280271964.html">
-                                        <img class="img-fluid" src="img/noticia1For.jpg">
+                                        <img class="img-fluid" src="img/noticia1For.jpg" alt="noticia Fornite 1">
                                       </a>
                                       <p class="text-new-esports">Ninja podría tener sus propios cosméticos en Fortnite</p>
                                     </div>
                                     <div class="col-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/league-of-legends/nuevas-camisetas-Nike-LPL_3_1281201868.html">
-                                        <img class="img-fluid" src="img/noticia2For.jpg">
+                                        <img class="img-fluid" src="img/noticia2For.jpg" alt="noticia Fornite 2">
                                       </a>
                                       <p class="text-new-esports">Reporta a un hacker en directo y lo banean al instante</p>
                                     </div>
                                 </div>
-                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters">
+                                <div class="carousel-Noticias-esports carousel-item row no-gutters">
                                     <div class="col-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/fortnite/copia-descarada-Fortnite-moviles_0_1279672032.html">
-                                        <img class="img-fluid" src="img/noticia3For.jpg">
+                                        <img class="img-fluid" src="img/noticia3For.jpg" alt="noticia Fornite 3">
                                       </a>
                                       <p class="text-new-esports">La copia más descarada de Fortnite para móviles</p>
                                     </div>
                                     <div class="col-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/fortnite/Top-jugadores-ganancias-Fortnite_3_1278502138.html">
-                                        <img class="img-fluid" src="img/noticia4For.jpg">
+                                        <img class="img-fluid" src="img/noticia4For.jpg" alt="noticia Fornite 4">
                                       </a>
                                        <p class="text-new-esports">Top 10 jugadores con más ganancias en Fortnite</p>
                                     </div>
@@ -458,30 +457,30 @@
                         <p>Ultimas Noticias ESports</p>
                         <div id="recipeCarousel-csgo" class="carousel slide w-100 carousel-esports" data-interval="false" data-ride="carousel">
                             <div class="carousel-inner w-100" role="listbox">
-                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters active">
+                                <div class="carousel-Noticias-esports carousel-item row no-gutters active">
                                     <div class="col-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/counter-strike--global-offensive/jugadores-dinero-ganado-CSGO_3_1280601930.html">
-                                        <img class="img-fluid" src="img/noticia1Csgo.jpg">
+                                        <img class="img-fluid" src="img/noticia1Csgo.jpg" alt="noticia CSgo 1">
                                       </a>
                                       <p class="text-new-esports">Los diez jugadores que más dinero han ganado en CS:GO</p>
                                     </div>
                                     <div class="col-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/counter-strike--global-offensive/presidente-Brasil-jugador-CSGO-impuestos_0_1268573132.html">
-                                        <img class="img-fluid" src="img/noticia2Csgo.jpg">
+                                        <img class="img-fluid" src="img/noticia2Csgo.jpg" alt="noticia CSgo 2">
                                       </a>
                                       <p class="text-new-esports">El presidente de Brasil llama a un jugador de CS:GO para debatir sobre impuestos</p>
                                     </div>
                                 </div>
-                                <div id="carousel-Noticias-esports" class="carousel-item row no-gutters">
+                                <div class="carousel-Noticias-esports carousel-item row no-gutters">
                                     <div class="col-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/counter-strike--global-offensive/Polemica-nueva-norma-Major_0_1261073882.html">
-                                        <img class="img-fluid" src="img/noticia3Csgo.jpg">
+                                        <img class="img-fluid" src="img/noticia3Csgo.jpg" alt="noticia CSgo 3">
                                       </a>
                                       <p class="text-new-esports">'Polémica' con la nueva norma para el Major</p>
                                     </div>
                                     <div class="col-6 float-left">
                                       <a target="_blank" href="https://esports.as.com/counter-strike--global-offensive/Mixwell-ficha-Cloud9_0_1259874016.html">
-                                        <img class="img-fluid" src="img/noticia4Csgo.jpg">
+                                        <img class="img-fluid" src="img/noticia4Csgo.jpg" alt="noticia CSgo 4">
                                       </a>
                                        <p class="text-new-esports">Mixwell ficha por Cloud9</p>
                                     </div>
